--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Services\\": "src/Services"
+            "Services\\": "src/Services",
+            "Controllers\\": "src/Controllers",
+            "Interfaces\\": "src/Interfaces",
+            "Exceptions\\": "src/Exceptions"
         }
     }
 }
