--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
             "Commands\\": "src/Commands",
             "Interfaces\\": "src/Interfaces",
             "Exceptions\\": "src/Exceptions"
-        }
+        },
+        "classmap": [
+            "src/"
+        ]
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6"
     }
 }
